Add pyroomacoustics signal generation

--- a/notebooks/DynamicStudy.ipynb
+++ b/notebooks/DynamicStudy.ipynb
@@ -85,12 +85,13 @@
     "n_buffer = 2048\n",
     "time_index = 2000 # idx where signal is non-zero for all positions, found heuristically\n",
     "angular_velocity_deg = 20 # deg/sec, velocity of drone\n",
-    "times_list = np.array([0, 1, 1.5], dtype=np.float) # in seconds\n",
+    "times_list = np.array([0, 1, 1.5]) # in seconds\n",
+    "period = 1/frequency_hz\n",
+    "times_list[1:] += period/2\n",
+    "times_list = np.array([round(t * FS) / FS for t in times_list])\n",
     "frequency_hz = 4134.375 # Hz\n",
     "\n",
     "# make sure times are not a multiple of period.\n",
-    "period = 1/frequency_hz\n",
-    "times_list[1:] += period/2\n",
     "\n",
     "signal_noise = 1e-3  # noise added to signals\n",
     "mics_noise = 0 #1e-3  # noise added to mic positions (rigid)\n",
@@ -161,13 +162,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# generate signals"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -175,15 +169,19 @@
    },
    "outputs": [],
    "source": [
-    "from generate_results import generate_signals_analytical\n",
+    "from generate_results import generate_signals_analytical, generate_signals_pyroom\n",
     "\n",
     "buffer_list = []\n",
     "for mics, time in zip(mics_list, times_list):\n",
     "    fig, ax = plt.subplots()\n",
     "    signals_received =  generate_signals_analytical(\n",
-    "        source, gt_angle_rad, mics, frequency_hz, time, noise=signal_noise, ax=ax) \n",
+    "        source, mics, frequency_hz, time, noise=signal_noise, ax=ax) \n",
+    "    \n",
+    "    signals_received =  generate_signals_pyroom(\n",
+    "        source, mics, frequency_hz, time, noise=signal_noise, ax=ax) \n",
+    "    \n",
     "    ax.set_xlim(1300, 1400) \n",
-    "    ax.legend([f\"mic{i}\" for i in range(mics.shape[0])])\n",
+    "    ax.legend()\n",
     "    ax.set_title(f'signals at time {time:.3f}')\n",
     "    \n",
     "    buffers = signals_received[:, time_index:time_index + n_buffer]\n",
@@ -193,6 +191,13 @@
     "    fig.suptitle(f'first {n_plot} samples of received buffers')\n",
     "    for i, ax in enumerate(axs):\n",
     "        ax.plot(buffers[i, :n_plot], color=f'C{i}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Do beamforming"
    ]
   },
   {
@@ -225,13 +230,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3. Create \"real\" multi-mic array"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -240,8 +238,8 @@
    "outputs": [],
    "source": [
     "mics_array = np.concatenate([*mics_list])\n",
-    "signals_multimic = generate_signals_analytical(source, gt_angle_rad, mics_array, frequency_hz, time=0, noise=signal_noise)\n",
-    "#signals_multimic = generate_signals_pyroom(source, source_signal, mics_array.T, time=0, noise=signal_noise)\n",
+    "#signals_multimic = generate_signals_analytical(source, mics_array, frequency_hz, time=0, noise=signal_noise)\n",
+    "signals_multimic = generate_signals_pyroom(source, mics_array, frequency_hz, time=0, noise=signal_noise)\n",
     "buffer_multimic = signals_multimic[:, time_index:time_index + n_buffer]\n",
     "\n",
     "times = np.arange(n_plot) / FS\n",
