Add foam analysis

--- a/notebooks/DynamicAnalysis.ipynb
+++ b/notebooks/DynamicAnalysis.ipynb
@@ -31,6 +31,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_orientations(df, fix='change'):\n",
+    "    orientations = df.yaw_deg.values.copy()\n",
+    "    orientations[~np.isnan(orientations)] = np.unwrap(orientations[~np.isnan(orientations)] / 180 * np.pi) * 180 / np.pi\n",
+    "    \n",
+    "    if fix == 'change':\n",
+    "        direction = np.zeros(len(orientations) - 1)\n",
+    "        diff = orientations[1:] - orientations[:-1]\n",
+    "        direction[diff < 1e-1] = -1\n",
+    "        direction[diff > 1e-1] = 1\n",
+    "        change_direction = np.abs(direction[1:] - direction[:-1])\n",
+    "        \n",
+    "        start_idx = np.where(change_direction == 1)[0][0] + 2\n",
+    "        change_indices = np.where(change_direction == 2)[0] + 2\n",
+    "        if len(change_indices) != 2:\n",
+    "            print(f'did not find 2 direction changes!')\n",
+    "        else:\n",
+    "            orientations = np.zeros(len(orientations))\n",
+    "            increase = np.linspace(0, -360, change_indices[0] - start_idx)\n",
+    "            decrease = np.linspace(-360, 0, change_indices[1] - change_indices[0])\n",
+    "            orientations[start_idx:change_indices[0]] = increase\n",
+    "            orientations[change_indices[0]:change_indices[1]] = decrease\n",
+    "    elif fix == 360:\n",
+    "        start_idx = 30\n",
+    "        increase = 205\n",
+    "        pause = 55\n",
+    "        decrease = 205\n",
+    "        start_angle = -0\n",
+    "        end_angle = -360\n",
+    "        idx = start_idx\n",
+    "        orientations[:idx] = start_angle\n",
+    "        orientations[idx:idx+increase] = np.linspace(start_angle, end_angle, increase)\n",
+    "        idx += increase\n",
+    "        orientations[idx:idx+pause] = end_angle\n",
+    "        idx += pause\n",
+    "        orientations[idx:idx+decrease] = np.linspace(end_angle, start_angle, decrease)\n",
+    "        idx += decrease\n",
+    "        orientations[idx:] = start_angle\n",
+    "    elif fix == 90:\n",
+    "        start_idx = 30\n",
+    "        deg90 = 370\n",
+    "        orientations[:start_idx] = 0\n",
+    "        orientations[start_idx:start_idx+deg90] = -90\n",
+    "        orientations[start_idx+deg90:] = 0\n",
+    "    elif fix == 0:\n",
+    "        orientations = np.zeros(len(orientations))\n",
+    "    elif fix is None:\n",
+    "        pass\n",
+    "    else: \n",
+    "        raise ValueError(fix)\n",
+    "        \n",
+    "    return orientations\n",
+    "\n",
+    "def get_positions(df):\n",
+    "    # compute positions based on relative movement\n",
+    "    start_pos = np.array([0, 0])\n",
+    "    positions = np.empty([len(df), 2])\n",
+    "    i_row = 0\n",
+    "    for i, row in df.iterrows():\n",
+    "        yaw_rad = row.yaw_deg / 180 * np.pi\n",
+    "        length = np.sqrt(row.dx**2 + row.dy**2) \n",
+    "        new_pos = start_pos + length * np.array([np.cos(yaw_rad), np.sin(yaw_rad)])\n",
+    "        positions[i_row, :] = new_pos\n",
+    "        i_row += 1\n",
+    "    return positions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from evaluate_data import read_df, get_spec\n",
     "from dynamic_analysis import add_pose_to_df\n",
     "\n",
@@ -40,18 +112,25 @@
     "#exp_name = '2020_11_03_sweep_old'; degree=90; start_idx = 20\n",
     "#exp_name = '2020_11_03_sweep'; degree=90; start_idx = 20\n",
     "\n",
-    "exp_name = '2020_11_10_buzzer'; degree=45; start_idx = 20\n",
+    "#exp_name = '2020_11_10_buzzer'; degree=45; start_idx = 20\n",
     "#exp_name = '2020_11_10_buzzer'; degree=0; start_idx = 20\n",
     "#exp_name = '2020_11_10_buzzer'; degree=0; start_idx = 20\n",
+    "\n",
+    "exp_name = '2020_11_12_speaker360'; degree=360; start_idx = 20\n",
+    "degree_offset = 15 #\n",
+    "\n",
+    "#exp_name = '2020_11_13_speaker360'; degree=360; start_idx = 20\n",
+    "#degree_offset = 230 #\n",
     "\n",
     "params = dict(\n",
     "    degree = degree,\n",
     "    props = False,\n",
     "    snr = False,\n",
-    "    motors = True,\n",
-    "    source = None,\n",
+    "    motors = False,\n",
+    "    source = 'mono',\n",
     "    exp_name = exp_name\n",
     ")\n",
+    "title = f\"motors: {params['motors']}, degree: {params['degree']}\"\n",
     "\n",
     "df, df_pos = read_df(**params)\n",
     "df.head()\n",
@@ -60,44 +139,36 @@
     "index_start = df.iloc[0]['index']\n",
     "df_pos = df_pos.loc[df_pos.index >= index_start]\n",
     "add_pose_to_df(df, df_pos)\n",
-    "df.head()\n",
+    "#df.head()\n",
     "\n",
+    "frequencies_matrix = np.array([*df.loc[:,'frequencies']])\n",
     "plt.figure()\n",
-    "i = 0\n",
-    "for mic in df.iloc[0].mic_positions:\n",
-    "    plt.scatter(mic[0], mic[1], label=f'mic{i}') \n",
-    "    i += 1\n",
-    "plt.legend()"
+    "plt.title('frequency selection over time')\n",
+    "plt.pcolormesh(frequencies_matrix.T)\n",
+    "plt.colorbar()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "start_pos = np.array([0, 0])\n",
-    "positions = np.empty([len(df), 2])\n",
+    "times_all = (df.audio_timestamp.values - df.iloc[0].audio_timestamp) / 1e6\n",
+    "\n",
+    "orientations = get_orientations(df, fix=None)\n",
+    "orientations_hard = get_orientations(df, fix=degree)\n",
+    "orientations_change = get_orientations(df, fix='change')\n",
     "\n",
     "plt.figure()\n",
-    "i_row = 0\n",
-    "for i, row in df.iterrows():\n",
-    "    yaw_rad = row.yaw_deg / 180 * np.pi\n",
-    "    length = np.sqrt(row.dx**2 + row.dy**2) \n",
-    "    new_pos = start_pos + length * np.array([np.cos(yaw_rad), np.sin(yaw_rad)])\n",
-    "    positions[i_row, :] = new_pos\n",
-    "    i_row += 1\n",
-    "    plt.scatter(row.timestamp/1000-df.timestamp.iloc[0]/1000, row.yaw_deg, color='C0')\n",
+    "plot_times = range(len(times_all))\n",
+    "plt.plot(plot_times, orientations, label='raw')\n",
+    "plt.plot(plot_times, orientations_hard, label=degree)\n",
+    "plt.plot(plot_times, orientations_change, label='change')\n",
+    "plt.grid()\n",
     "plt.xlabel('time [s]')\n",
     "plt.ylabel('yaw [deg]')\n",
-    "    \n",
-    "plt.figure()\n",
-    "plt.scatter(positions[:, 0], positions[:, 1])\n",
-    "plt.axis('equal')\n",
-    "plt.xlabel('x [mm]')\n",
-    "plt.ylabel('y [mm]')"
+    "plt.legend()"
    ]
   },
   {
@@ -109,39 +180,74 @@
     "from audio_stack.beam_former import BeamFormer, normalize_rows, combine_rows\n",
     "import progressbar\n",
     "\n",
-    "combination_n = 1\n",
-    "combination_method = \"sum\"\n",
-    "normalization_method = \"none\"\n",
-    "method = \"das\"\n",
     "bin_selection = \"fixed\"; selected_hz = [4100]\n",
-    "\n",
-    "averaging = 'ma'\n",
     "\n",
     "#columns = range(len(df))\n",
     "columns = list(range(len(df)))[::3]\n",
     "\n",
-    "selected_idx = [np.argmin(np.abs(df.iloc[0].frequencies - hz)) for hz in selected_hz]\n",
-    "\n",
-    "# covariance averaging\n",
+    "selected_idx = list(set([np.argmin(np.abs(df.iloc[0].frequencies - hz)) for hz in selected_hz]))\n",
+    "print(selected_idx)\n",
+    "print('frequency bin:', df.iloc[0].frequencies[selected_idx])\n",
+    "print('desired:', selected_hz)\n",
+    "    \n",
+    "# covariance avera    ging\n",
     "#averaging = 'iir'\n",
-    "#alpha = 0.5 # set to 1 for no effect"
+    "#alpha = 0.5 # set to 1 for no effect\n",
+    "\n",
+    "orientations = orientations_hard[columns]\n",
+    "times = times_all[columns]\n",
+    "\n",
+    "start_orientation = orientations[~np.isnan(orientations)][0]\n",
+    "raw_orientations =  start_orientation - orientations\n",
+    "abs_orientations = np.full(orientations.shape, start_orientation)\n",
+    "    \n",
+    "raw_orientations += degree_offset\n",
+    "abs_orientations += degree_offset\n",
+    "raw_orientations[raw_orientations < 0] += 360\n",
+    "abs_orientations[abs_orientations < 0] += 360\n",
+    "raw_orientations[raw_orientations >= 360] -= 360\n",
+    "abs_orientations[abs_orientations >= 360] -= 360"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots()\n",
-    "times = (df.iloc[columns].audio_timestamp - df.iloc[0].audio_timestamp) / 1e6\n",
-    "signals_f = np.array([*df.iloc[columns]['signals_f']]) # n_times x n_mics x n_freqs\n",
+    "signals_f = np.array([*df['signals_f']]) # n_times x n_mics x n_freqs\n",
+    "print(signals_f.shape[2])\n",
+    "\n",
+    "fig, (ax, ax_g) = plt.subplots(2)\n",
+    "ax_g.plot(times, orientations)\n",
+    "fig, axs = plt.subplots(signals_f.shape[1] + 1, sharex=True)\n",
+    "axs[-1].plot(times, orientations)\n",
+    "fig.suptitle(title)\n",
     "for i in range(signals_f.shape[1]):\n",
-    "    ax.plot(times, \n",
-    "            np.sum(np.abs(signals_f[:, i, selected_idx]), axis=1))\n",
-    "ax.set_ylim([1e-3, 2])\n",
-    "ax.legend([f\"mic{i}\" for i in range(row.signals_f.shape[0])])\n",
-    "ax.set_xlabel('time [s]')"
+    "    for j in range(signals_f.shape[2]):\n",
+    "        axs[i].plot(times_all, \n",
+    "                    np.sum(np.abs(signals_f[:, i, [j]]), axis=1), \n",
+    "                    color=f'C{i}', alpha=0.1)\n",
+    "        \n",
+    "        ax.plot(times_all, \n",
+    "                    np.sum(np.abs(signals_f[:, i, [j]]), axis=1), \n",
+    "                    color=f'C{i}', alpha=0.1)\n",
+    "    axs[i].plot(times_all, \n",
+    "            np.sum(np.abs(signals_f[:, i, selected_idx])/len(selected_idx), axis=1),\n",
+    "            color=f'C{i}',\n",
+    "            label=f'mic{i}')\n",
+    "    ax.plot(times_all, \n",
+    "            np.sum(np.abs(signals_f[:, i, selected_idx])/len(selected_idx), axis=1),\n",
+    "            color=f'C{i}',\n",
+    "            label=f'mic{i}')\n",
+    "axs[i].set_xlabel('time [s]')\n",
+    "#ax.set_ylim([1e-3, 4])\n",
+    "#ax.legend([f\"mic{i}\" for i in range(row.signals_f.shape[0])])\n",
+    "ax.legend()\n",
+    "ax.set_xlabel('time [s]')\n",
+    "ax.set_title(title)"
    ]
   },
   {
@@ -164,14 +270,10 @@
     "    )\n",
     "    angles = BeamFormer.theta_scan * 180 / np.pi\n",
     "\n",
-    "    start_orientation = orientations[~np.isnan(orientations)][0]\n",
-    "    raw_orientations =  start_orientation - orientations\n",
-    "    if degree != 45:\n",
-    "        raw_orientations += degree\n",
-    "        raw_orientations[raw_orientations < 0] += 360\n",
-    "\n",
-    "    ax.pcolormesh(times, angles, raw_heatmap)\n",
-    "    ax.plot(times, raw_orientations, **extra_kwargs)\n",
+    "    #plot_times = range(len(times))\n",
+    "    plot_times = times\n",
+    "    ax.pcolormesh(plot_times, angles, raw_heatmap)\n",
+    "    ax.plot(plot_times, raw_orientations, **extra_kwargs)\n",
     "    ax.set_ylim(0, 360)\n",
     "    ax.set_xlabel('time [s]')\n",
     "    ax.set_ylabel('angle [deg]')"
@@ -180,22 +282,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "#mic_selection = [1, 2] #[1, 3] #list(range(4))\n",
     "import itertools\n",
     "\n",
+    "combination_n = 5\n",
+    "combination_method = \"sum\"\n",
+    "normalization_method = \"none\"\n",
+    "method = \"das\"\n",
+    "averaging = 'none'\n",
+    "alpha = 0.5\n",
     "n_columns = len(columns)\n",
     "\n",
-    "for num in [2, 3, 4]:\n",
-    "    \n",
+    "for num in [4]: #[2, 3, 4]:\n",
     "    combis = list(itertools.combinations(range(4), num))\n",
     "    n_combis = len(combis)\n",
     "    \n",
     "    fig, axs = plt.subplots(1, n_combis, sharey=True, sharex=True, squeeze=False)\n",
     "    axs = axs.reshape((n_combis,))\n",
-    "    fig.suptitle(f\"motors: {params['motors']}, degree: {params['degree']}\")\n",
+    "    fig.suptitle(title)\n",
     "    fig.set_size_inches(15, 5)\n",
     "    axs_i = 0\n",
     "\n",
@@ -206,9 +314,7 @@
     "        R_idx = 0; R_list = [[]] * combination_n\n",
     "        R = None\n",
     "    \n",
-    "        angles = beam_former.theta_scan\n",
-    "        times = np.empty(n_columns)\n",
-    "        orientations = np.full(n_columns, np.nan)\n",
+    "        angles = BeamFormer.theta_scan\n",
     "        raw_heatmap = np.zeros((len(angles), n_columns))\n",
     "\n",
     "        i_col = 0\n",
@@ -240,6 +346,8 @@
     "                    R_list[R_idx] = R_new\n",
     "                    R_idx = (R_idx + 1) % combination_n\n",
     "                    R = np.mean([R_elem for R_elem in R_list if len(R_elem)], axis=0)\n",
+    "                elif averaging == 'none':\n",
+    "                    R = R_new\n",
     "\n",
     "                if method == 'mvdr':\n",
     "                    raw_spectrum = beam_former.get_mvdr_spectrum(R, freqs)\n",
@@ -257,8 +365,6 @@
     "                    dynamic_heatmap[:, i_col] = dynamic_spectrum.flatten()\n",
     "                if multi_spectrum is not None:\n",
     "                    multi_heatmap[:, i_col] = multi_spectrum.flatten()\n",
-    "                times[i_col] = time_sec\n",
-    "                orientations[i_col] = orientation_deg\n",
     "                i_col += 1\n",
     "\n",
     "                if i_col >= n_columns:\n",
@@ -295,18 +401,7 @@
     "    lw=2\n",
     "    )\n",
     "\n",
-    "    times = (df.iloc[columns].audio_timestamp - df.iloc[0].audio_timestamp) / 1e6\n",
     "    angles = BeamFormer.theta_scan * 180 / np.pi\n",
-    "\n",
-    "    start_orientation = orientations[~np.isnan(orientations)][0]\n",
-    "    raw_orientations =  start_orientation - orientations\n",
-    "    abs_orientations = np.full(orientations.shape, start_orientation)\n",
-    "\n",
-    "    if degree != 45:\n",
-    "        raw_orientations += degree\n",
-    "        abs_orientations += degree\n",
-    "        raw_orientations[raw_orientations < 0] += 360\n",
-    "        abs_orientations[abs_orientations < 0] += 360\n",
     "\n",
     "    axs[0, 0].pcolormesh(times, angles, raw_heatmap)\n",
     "    axs[0, 0].plot(times, raw_orientations, **extra_kwargs)\n",
@@ -344,7 +439,6 @@
     "\n",
     "if bin_selection == \"fixed\":\n",
     "    selected_idx = [np.argmin(np.abs(df.iloc[0].frequencies - hz)) for hz in selected_hz]\n",
-    "    print(selected_idx)\n",
     "    frequencies = df.iloc[0].frequencies[selected_idx] \n",
     "    beam_former.init_dynamic_estimate(frequencies, combination_n, combination_method, normalization_method)\n",
     "    beam_former.init_multi_estimate(frequencies, combination_n)\n",
@@ -357,9 +451,8 @@
     "R = None\n",
     "\n",
     "n_columns = len(columns)\n",
-    "angles = beam_former.theta_scan\n",
-    "times = np.empty(n_columns)\n",
-    "orientations = np.full(n_columns, np.nan)\n",
+    "angles = BeamFormer.theta_scan\n",
+    "\n",
     "raw_heatmap = np.zeros((len(angles), n_columns))\n",
     "dynamic_heatmap = np.zeros((len(angles), n_columns))\n",
     "multi_heatmap = np.zeros((len(angles), n_columns))\n",
@@ -380,7 +473,7 @@
     "            # TODO(FD): implement this\n",
     "            pass\n",
     "\n",
-    "        orientation_deg = row.yaw_deg\n",
+    "        orientation_deg = orientations[i_col] #row.yaw_deg\n",
     "        timestamp = row.timestamp\n",
     "\n",
     "        R_new = beam_former.get_correlation(signals_f.T) # n_freqs x n_mics x n_mics\n",
@@ -393,6 +486,8 @@
     "            R_list[R_idx] = R_new\n",
     "            R_idx = (R_idx + 1) % combination_n\n",
     "            R = np.mean([R_elem for R_elem in R_list if len(R_elem)], axis=0)\n",
+    "        elif averaging == 'none':\n",
+    "            R = R_new\n",
     "\n",
     "        if method == 'mvdr':\n",
     "            raw_spectrum = beam_former.get_mvdr_spectrum(R, freqs)\n",
@@ -400,7 +495,7 @@
     "            raw_spectrum = beam_former.get_das_spectrum(R, freqs)\n",
     "        time_sec = row.audio_timestamp / 1e6\n",
     "\n",
-    "        if not pd.isna(row.yaw_deg):\n",
+    "        if not pd.isna(orientation_deg):\n",
     "            #### DYNAMIC\n",
     "            beam_former.add_to_dynamic_estimates(raw_spectrum, orientation_deg=orientation_deg)\n",
     "            dynamic_spectrum = beam_former.get_dynamic_estimate()\n",
@@ -424,8 +519,6 @@
     "            dynamic_heatmap[:, i_col] = dynamic_spectrum.flatten()\n",
     "        if multi_spectrum is not None:\n",
     "            multi_heatmap[:, i_col] = multi_spectrum.flatten()\n",
-    "        times[i_col] = time_sec\n",
-    "        orientations[i_col] = orientation_deg\n",
     "        i_col += 1\n",
     "\n",
     "        if i_col >= n_columns:\n",
@@ -441,7 +534,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plotting (can start here directly!)"
+    "# Plotting (can start here directly!)\n",
+    "\n",
+    "## run dynamic_analaysis.py to generate results"
    ]
   },
   {
