--- a/notebooks/DynamicAnalysis.ipynb
+++ b/notebooks/DynamicAnalysis.ipynb
@@ -116,11 +116,11 @@
     "#exp_name = '2020_11_10_buzzer'; degree=0; start_idx = 20\n",
     "#exp_name = '2020_11_10_buzzer'; degree=0; start_idx = 20\n",
     "\n",
-    "exp_name = '2020_11_12_speaker360'; degree=360; start_idx = 20\n",
-    "degree_offset = 15 #\n",
+    "#exp_name = '2020_11_12_speaker360'; degree=360; start_idx = 20\n",
+    "#degree_offset = 15 #\n",
     "\n",
-    "#exp_name = '2020_11_13_speaker360'; degree=360; start_idx = 20\n",
-    "#degree_offset = 230 #\n",
+    "exp_name = '2020_11_13_speaker360'; degree=360; start_idx = 20\n",
+    "degree_offset = 230 #\n",
     "\n",
     "params = dict(\n",
     "    degree = degree,\n",
@@ -146,6 +146,33 @@
     "plt.title('frequency selection over time')\n",
     "plt.pcolormesh(frequencies_matrix.T)\n",
     "plt.colorbar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csv_file = '../experiments/2020_11_13_speaker360/Yaw-20201113T16-29-16.csv'\n",
+    "df_log = pd.read_csv(csv_file)\n",
+    "print(df_log.head())\n",
+    "\n",
+    "t_0 = df_log.iloc[0].Timestamp\n",
+    "yaw = 0\n",
+    "integrated_yaw = [yaw]\n",
+    "for yaw_rate, t_1 in zip(df_log.iloc[1:]['gyro.z'], df_log.iloc[1:].Timestamp):\n",
+    "    yaw_delta = yaw_rate * (t_1 - t_0) * 1e-3\n",
+    "    yaw += yaw_delta\n",
+    "    integrated_yaw.append(yaw)\n",
+    "    t_0 = t_1\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "fig.set_size_inches(10, 5)\n",
+    "plt.plot(df_log.Timestamp, df_log['gyro.z'])\n",
+    "plt.plot(df_log.Timestamp, df_log['stabilizer.yaw'])\n",
+    "plt.plot(df_log.Timestamp, integrated_yaw)\n",
+    "plt.xlim([35000, 70000])"
    ]
   },
   {
@@ -190,7 +217,7 @@
     "print('frequency bin:', df.iloc[0].frequencies[selected_idx])\n",
     "print('desired:', selected_hz)\n",
     "    \n",
-    "# covariance avera    ging\n",
+    "# covariance averaging\n",
     "#averaging = 'iir'\n",
     "#alpha = 0.5 # set to 1 for no effect\n",
     "\n",
