--- a/notebooks/DynamicStudy.ipynb
+++ b/notebooks/DynamicStudy.ipynb
@@ -147,6 +147,7 @@
     "gt_distance = 10  # meters, distance of source\n",
     "gt_angles_deg = [50] # angle of ground truth\n",
     "phase_offsets = [0.0]\n",
+    "angular_velocity_deg = 20 # deg/sec, velocity of drone\n",
     "\n",
     "max_distance = SPEED_OF_SOUND / frequency_hz / 2\n",
     "mics_drone = get_square_array(baseline=baseline, delta=0) # 4 x 2\n",
@@ -157,7 +158,9 @@
     "#times_list = np.array([0, 0.8, 1.5]) #3., 6.]) #1, 1.5]) # in seconds\n",
     "\n",
     "# uniform array, works very well\n",
-    "times_list = np.array([30/20, 60/20, 90/20]) #3., 6.]) #1, 1.5]) # in seconds\n",
+    "times_list = np.array([30/angular_velocity_deg, \n",
+    "                       60/angular_velocity_deg, \n",
+    "                       90/angular_velocity_deg]) # in seconds\n",
     "\n",
     "# very small (too small) movements\n",
     "#times_list = np.array([0, 0.2, 0.3, 0.5, 0.4]) #3., 6.]) #1, 1.5]) # in seconds"
@@ -172,7 +175,6 @@
     "### parameters\n",
     "n_buffer = 2048\n",
     "time_index = 2000 # idx where signal is non-zero for all positions, found heuristically\n",
-    "angular_velocity_deg = 20 # deg/sec, velocity of drone\n",
     "period = 1/frequency_hz\n",
     "\n",
     "# make sure times are not an exact multiple of period\n",
@@ -482,13 +484,6 @@
    "source": [
     "# Moving noise source (like propellers)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
