--- a/notebooks/DynamicStudy.ipynb
+++ b/notebooks/DynamicStudy.ipynb
@@ -185,6 +185,7 @@
     "signal_noise = 1e-3  # noise added to signals\n",
     "mics_noise = 0 #1e-3  # noise added to mic positions (rigid)\n",
     "degree_noise = 0 #5 # noise added to each movement, in degrees\n",
+    "# TODO(FD) add translation imprecision\n",
     "time_quantization = 6 # number of decimal places to keep\n",
     "time_noise = 0 #1e-6 # noise added to recording times\n",
     "\n",
@@ -517,6 +518,7 @@
     "\n",
     "for d, (degree_noise, df_degree_noise) in enumerate(df.groupby('degree_noise')):\n",
     "    fig, axs = plt.subplots(1, len(label_list), sharey=True, sharex=True)\n",
+    "    fig.suptitle(degree_noise)\n",
     "    fig.set_size_inches(10, 3)\n",
     "    for counter, (__, row) in enumerate(df_degree_noise.iterrows()):\n",
     "        for l, label in enumerate(label_list):\n",
@@ -551,11 +553,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Next simulations: \n",
+    "- add translational noise\n",
+    "- test tranlsational and rotational noise independently "
+   ]
   }
  ],
  "metadata": {
