--- a/notebooks/DynamicAnalysis.ipynb
+++ b/notebooks/DynamicAnalysis.ipynb
@@ -31,17 +31,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_orientations(df, fix='change'):\n",
-    "    orientations = df.yaw_deg.values.copy()\n",
-    "    orientations[~np.isnan(orientations)] = np.unwrap(orientations[~np.isnan(orientations)] / 180 * np.pi) * 180 / np.pi\n",
+    "def get_orientations(df, fix='change', slow=True):\n",
+    "    from evaluate_data import integrate_yaw\n",
     "    \n",
+    "    orientations = df.yaw_deg.values.copy()\n",
+    "    orientations[~np.isnan(orientations)] = np.unwrap(\n",
+    "        orientations[~np.isnan(orientations)] / 180 * np.pi) * 180 / np.pi\n",
+    "\n",
     "    if fix == 'change':\n",
     "        direction = np.zeros(len(orientations) - 1)\n",
     "        diff = orientations[1:] - orientations[:-1]\n",
     "        direction[diff < 1e-1] = -1\n",
     "        direction[diff > 1e-1] = 1\n",
     "        change_direction = np.abs(direction[1:] - direction[:-1])\n",
-    "        \n",
+    "\n",
     "        start_idx = np.where(change_direction == 1)[0][0] + 2\n",
     "        change_indices = np.where(change_direction == 2)[0] + 2\n",
     "        if len(change_indices) != 2:\n",
@@ -49,52 +52,52 @@
     "        else:\n",
     "            orientations = np.zeros(len(orientations))\n",
     "            increase = np.linspace(0, -360, change_indices[0] - start_idx)\n",
-    "            decrease = np.linspace(-360, 0, change_indices[1] - change_indices[0])\n",
+    "            decrease = np.linspace(-360, 0,\n",
+    "                                   change_indices[1] - change_indices[0])\n",
     "            orientations[start_idx:change_indices[0]] = increase\n",
     "            orientations[change_indices[0]:change_indices[1]] = decrease\n",
     "    elif fix == 360:\n",
-    "        start_idx = 30\n",
-    "        increase = 205\n",
-    "        pause = 55\n",
-    "        decrease = 205\n",
+    "        if slow:\n",
+    "            start_idx = 30\n",
+    "            increase = 205\n",
+    "            pause = 55\n",
+    "            decrease = 205\n",
+    "        else:\n",
+    "            start_idx = 15\n",
+    "            increase = 132\n",
+    "            pause = 22\n",
+    "            decrease = 102\n",
     "        start_angle = -0\n",
     "        end_angle = -360\n",
     "        idx = start_idx\n",
     "        orientations[:idx] = start_angle\n",
-    "        orientations[idx:idx+increase] = np.linspace(start_angle, end_angle, increase)\n",
+    "        orientations[idx:idx + increase] = np.linspace(start_angle, end_angle,\n",
+    "                                                       increase)\n",
     "        idx += increase\n",
-    "        orientations[idx:idx+pause] = end_angle\n",
+    "        orientations[idx:idx + pause] = end_angle\n",
     "        idx += pause\n",
-    "        orientations[idx:idx+decrease] = np.linspace(end_angle, start_angle, decrease)\n",
+    "        orientations[idx:idx + decrease] = np.linspace(end_angle, start_angle,\n",
+    "                                                       decrease)\n",
     "        idx += decrease\n",
     "        orientations[idx:] = start_angle\n",
     "    elif fix == 90:\n",
     "        start_idx = 30\n",
     "        deg90 = 370\n",
     "        orientations[:start_idx] = 0\n",
-    "        orientations[start_idx:start_idx+deg90] = -90\n",
-    "        orientations[start_idx+deg90:] = 0\n",
+    "        orientations[start_idx:start_idx + deg90] = -90\n",
+    "        orientations[start_idx + deg90:] = 0\n",
     "    elif fix == 0:\n",
     "        orientations = np.zeros(len(orientations))\n",
+    "    elif fix == 'rate':\n",
+    "        orientations = integrate_yaw(df.timestamp.values,\n",
+    "                                     df.yaw_rate_deg.values)\n",
+    "\n",
     "    elif fix is None:\n",
     "        pass\n",
-    "    else: \n",
+    "    else:\n",
     "        raise ValueError(fix)\n",
-    "        \n",
-    "    return orientations\n",
     "\n",
-    "def get_positions(df):\n",
-    "    # compute positions based on relative movement\n",
-    "    start_pos = np.array([0, 0])\n",
-    "    positions = np.empty([len(df), 2])\n",
-    "    i_row = 0\n",
-    "    for i, row in df.iterrows():\n",
-    "        yaw_rad = row.yaw_deg / 180 * np.pi\n",
-    "        length = np.sqrt(row.dx**2 + row.dy**2) \n",
-    "        new_pos = start_pos + length * np.array([np.cos(yaw_rad), np.sin(yaw_rad)])\n",
-    "        positions[i_row, :] = new_pos\n",
-    "        i_row += 1\n",
-    "    return positions"
+    "    return orientations"
    ]
   },
   {
@@ -103,9 +106,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from evaluate_data import read_df, get_spec\n",
+    "from evaluate_data import read_df, get_spec, get_positions\n",
     "from dynamic_analysis import add_pose_to_df\n",
     "\n",
+    "distance = None\n",
     "#exp_name = '2020_10_30_dynamic'; degree=0; start_idx = 0# correct mic positions, but only one degree\n",
     "#exp_name = '2020_10_30_dynamic_test'; degree=0; start_idx=0 #degree=90; \n",
     "#exp_name = '2020_10_30_dynamic_move'; degree=0; start_idx=0\n",
@@ -119,15 +123,19 @@
     "#exp_name = '2020_11_12_speaker360'; degree=360; start_idx = 20\n",
     "#degree_offset = 15 #\n",
     "\n",
-    "exp_name = '2020_11_13_speaker360'; degree=360; start_idx = 20\n",
-    "degree_offset = 230 #\n",
+    "#exp_name = '2020_11_13_speaker360'; degree=360; start_idx = 20\n",
+    "#degree_offset = 230 #\n",
+    "\n",
+    "exp_name = '2020_11_23_wall2'; degree=360; start_idx = 20; distance=0\n",
+    "degree_offset = 0 #\n",
     "\n",
     "params = dict(\n",
+    "    distance = distance,\n",
     "    degree = degree,\n",
     "    props = False,\n",
     "    snr = False,\n",
-    "    motors = False,\n",
-    "    source = 'mono',\n",
+    "    motors = True,\n",
+    "    source = 'mono4125',\n",
     "    exp_name = exp_name\n",
     ")\n",
     "title = f\"motors: {params['motors']}, degree: {params['degree']}\"\n",
@@ -158,14 +166,7 @@
     "df_log = pd.read_csv(csv_file)\n",
     "print(df_log.head())\n",
     "\n",
-    "t_0 = df_log.iloc[0].Timestamp\n",
-    "yaw = 0\n",
-    "integrated_yaw = [yaw]\n",
-    "for yaw_rate, t_1 in zip(df_log.iloc[1:]['gyro.z'], df_log.iloc[1:].Timestamp):\n",
-    "    yaw_delta = yaw_rate * (t_1 - t_0) * 1e-3\n",
-    "    yaw += yaw_delta\n",
-    "    integrated_yaw.append(yaw)\n",
-    "    t_0 = t_1\n",
+    "integrated_yaw = integrate_yaw(df_log.Timestamp.values, df_log['gyro.z'].values)\n",
     "\n",
     "fig = plt.figure()\n",
     "fig.set_size_inches(10, 5)\n",
@@ -184,14 +185,16 @@
     "times_all = (df.audio_timestamp.values - df.iloc[0].audio_timestamp) / 1e6\n",
     "\n",
     "orientations = get_orientations(df, fix=None)\n",
-    "orientations_hard = get_orientations(df, fix=degree)\n",
+    "orientations_hard = get_orientations(df, fix=degree, slow=False)\n",
     "orientations_change = get_orientations(df, fix='change')\n",
+    "orientations_rate = get_orientations(df, fix='rate')\n",
     "\n",
     "plt.figure()\n",
     "plot_times = range(len(times_all))\n",
     "plt.plot(plot_times, orientations, label='raw')\n",
     "plt.plot(plot_times, orientations_hard, label=degree)\n",
     "plt.plot(plot_times, orientations_change, label='change')\n",
+    "plt.plot(plot_times, orientations_rate, label='rate')\n",
     "plt.grid()\n",
     "plt.xlabel('time [s]')\n",
     "plt.ylabel('yaw [deg]')\n",
@@ -221,7 +224,8 @@
     "#averaging = 'iir'\n",
     "#alpha = 0.5 # set to 1 for no effect\n",
     "\n",
-    "orientations = orientations_hard[columns]\n",
+    "#orientations = orientations_hard[columns]\n",
+    "orientations = orientations_rate[columns]\n",
     "times = times_all[columns]\n",
     "\n",
     "start_orientation = orientations[~np.isnan(orientations)][0]\n",
